wb-configs (3.13.1-70549e24-001) stable; urgency=medium

  * add special settings

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Wed, 29 Mar 2023 13:59:30 +0600

wb-configs (3.13.1) stable; urgency=medium

  * Add WBGSM_INTERACTIVE env var to /etc/profile.d
  * Unset WBGSM_INTERACTIVE env var in all ppp peers

 -- Vladimir Romanov <v.romanov@wirenboard.ru>  Mon, 20 Mar 2023 10:37:28 +0300

wb-configs (3.13.0) stable; urgency=medium

  * add apt pin for Wiren Board experimental repos

 -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Thu, 16 Mar 2023 16:30:51 +0600

wb-configs (3.12.1) stable; urgency=medium

  * Ownership for /var/www/uploads/ is set from wb-configs-early.service (instead of postinst)

 -- Vladimir Romanov <v.romanov@wirenboard.ru>  Wed, 15 Mar 2023 10:54:38 +0300

wb-configs (3.12.0) stable; urgency=medium

  * Add /etc/mosquitto/conf.d/30limits.conf

 -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Tue, 14 Mar 2023 14:33:00 +0400

wb-configs (3.11.0) stable; urgency=medium

  * Make /etc/network/interfaces empty by default

 -- Vladimir Romanov <v.romanov@wirenboard.ru>  Thu, 09 Mar 2023 17:53:38 +0300

wb-configs (3.10.4) stable; urgency=medium

  * Introduce additional dnsmasq config (/etc/dnsmasq.d/) with "bind-interfaces" option

 -- Vladimir Romanov <v.romanov@wirenboard.ru>  Mon, 27 Feb 2023 17:24:19 +0300

wb-configs (3.10.3) stable; urgency=medium

  * 99-wb-modem.rules: SIM800, SIM800C-DS, SIM5300E, SIM7000E are not supported in NM+MM

 -- Vladimir Romanov <v.romanov@wirenboard.ru>  Tue, 31 Jan 2023 23:22:18 +0300

wb-configs (3.10.2) stable; urgency=medium

  * Restart dnsmasq on postinstall

 -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Thu, 26 Jan 2023 16:06:00 +0400

wb-configs (3.10.1) stable; urgency=medium

  * debug-network connection: rename; remove gateway and default route

 -- Vladimir Romanov <v.romanov@wirenboard.ru>  Tue, 17 Jan 2023 22:55:23 +0300

wb-configs (3.10.0) stable; urgency=medium
