@@ -5,8 +5,11 @@ import sys
 import tempfile
 from cgi import FieldStorage
 
+if os.path.islink("/var/run/wb-watch-update.dir"):
+    RW_DIR = os.path.realpath("/var/run/wb-watch-update.dir")
+else:
+    RW_DIR = os.environ.get("UPLOADS_DIR", "/var/www/uploads")  # nginx user should has rw access
 
-RW_DIR = os.environ.get("UPLOADS_DIR", "/var/www/uploads")  # nginx user should has rw access
 TMP_DIR = os.path.join(RW_DIR, "state", "tmp")  # excluded from wb-watch-update
 os.makedirs(TMP_DIR, exist_ok=True)
 
@@ -31,12 +34,11 @@ class DiskFieldStorage(FieldStorage):
     """
 
     def make_file(self):
-        location = TMP_DIR # has rw access & excluded from wb-watch-update
+        location = TMP_DIR  # has rw access & excluded from wb-watch-update
         if self._binary_file:
             return tempfile.TemporaryFile("wb+", dir=location)
         else:
-            return tempfile.TemporaryFile("w+",
-                encoding=self.encoding, newline = '\n', dir=location)
+            return tempfile.TemporaryFile("w+", encoding=self.encoding, newline="\n", dir=location)
 
 
 form = DiskFieldStorage(encoding="utf-8")
