@@ -1,5 +1,7 @@
 wb-configs (3.13.1-70549e24-001) stable; urgency=medium
 
+  * Backported from wb-2304 testing:
+    * fwupdate_upload: single rootfs update scheme support
   * add special settings
 
  -- Nikita Maslov <nikita.maslov@wirenboard.ru>  Wed, 29 Mar 2023 13:59:30 +0600
